[tool.poetry]
name = "pythport"
version = "0.1.0"
description = ""
authors = ["Joe Streifel <josephstreifel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = "^3.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
